UPDATE: Add icons to the Todo App Demo

--- a/demo/todo/todo.html
+++ b/demo/todo/todo.html
@@ -35,16 +35,25 @@
 
       <ul class="list-group">
         <li class="list-group-item list-group-item-secondary list-group-item-action d-flex justify-content-between align-items-center">
+          <span>
+            <i class="icon ion-md-checkbox-outline mr-3"></i>
             <del>Cras justo odio</del>
-            <i class="icon ion-md-close"></i>
+          </span>
+          <i class="icon ion-md-close"></i>
         </li>
         <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-          Dapibus ac facilisis in
-            <i class="icon ion-md-close"></i>
+          <span>
+            <i class="icon ion-md-square-outline mr-3"></i>
+            Dapibus ac facilisis in
+          </span>
+          <i class="icon ion-md-close"></i>
         </li>
         <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-          Morbi leo risus
-            <i class="icon ion-md-close"></i>
+          <span>
+            <i class="icon ion-md-square-outline mr-3"></i>
+            Morbi leo risus
+          </span>
+          <i class="icon ion-md-close"></i>
         </li>
       </ul>
     </div>
