--- a/demo/todo/todo.html
+++ b/demo/todo/todo.html
@@ -66,7 +66,7 @@
 
   <!-- Wibasejs ================================================== -->
   <script src="../../.tmp/wibase.js"></script>
-  <script src="./crud.js"></script>
+  <script src="./todo.js"></script>
 
 </body>
 
