--- a/demo/todo/todo.html
+++ b/demo/todo/todo.html
@@ -29,7 +29,7 @@
         <input type="text" class="form-control" placeholder="Title..." aria-label="Recipient's username"
           aria-describedby="basic-addon2">
         <div class="input-group-append">
-          <button class="btn  btn-primary" type="button">ADD</button>
+          <button onclick="addItem()" class="btn  btn-primary" type="button">ADD</button>
         </div>
       </div>
 
